<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#74377E"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tipcalculator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amountOfBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="10.00"
                android:text="Amount of Bill($):"
                android:textColor="#F5EEEE" />

            <EditText
                android:id="@+id/costOfBillEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="10.00"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pToTip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Percent to Tip(%)"
                android:textColor="#F5EEEE" />

            <SeekBar
                android:id="@+id/seekBarTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="99"
                android:progress="0" />

            <TextView
                android:id="@+id/textViewTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="10"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nOfPeople"
                android:layout_width="286dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Number of People:"
                android:textColor="#F5EEEE" />

            <Spinner
                android:id="@+id/peopleAmountSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dialog"
                android:splitMotionEvents="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tip Amount:"
                android:textColor="#F5EEEE" />

            <TextView
                android:id="@+id/outcomeTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textColor="#F5EEEE" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalToPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Total to Pay:"
                android:textColor="#F5EEEE" />

            <TextView
                android:id="@+id/outcomePay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textColor="#F5EEEE" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalPerPerson"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Total Per Person"
                android:textColor="#F5EEEE" />

            <TextView
                android:id="@+id/outcomePerPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textColor="#F5EEEE" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>